fix tiny element spacing mobile behavior

--- a/assets/css/src/_structure.scss
+++ b/assets/css/src/_structure.scss
@@ -79,6 +79,8 @@
 	}
 
 	&.tiny {
+		padding-bottom: 1rem;
+		padding-top: 1rem;
 
 		@media all and (min-width: 980px) {
 			padding-bottom: 1rem;
