--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  * Author: Sean Davis
  * Author URI: https://crispydiv.com
  * Description: Custom theme for crispydiv.com
- * Version: 1.0.18
+ * Version: 1.0.19
  * License: GNU General Public License v2 or later
  *
  * Crispy Div is based on Underscores https://underscores.me/, (C) 2012-2023 Automattic, Inc.
@@ -448,10 +448,13 @@ html body {
     .element-spacing {
       padding-left: 4.5rem;
       padding-right: 4.5rem; } }
-  @media all and (min-width: 980px) {
-    .element-spacing.tiny {
-      padding-bottom: 1rem;
-      padding-top: 1rem; } }
+  .element-spacing.tiny {
+    padding-bottom: 1rem;
+    padding-top: 1rem; }
+    @media all and (min-width: 980px) {
+      .element-spacing.tiny {
+        padding-bottom: 1rem;
+        padding-top: 1rem; } }
   @media all and (min-width: 980px) {
     .element-spacing.small {
       padding-bottom: 3rem;
